force-app/main/default/objects/ASF_Case_Email_Config__c/ASF_Case_Email_Config__c.object-meta.xml
<CustomObject>
    <label>Case Email Config</label>
    <nameField>
        <displayFormat>RSE-{00000000}</displayFormat>
        <label>Regional SMS Email Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Email Configs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>