force-app/main/default/objects/ASF_Case_Email_Config__c/fields/Canned_Response_Email_Template__c.field-meta.xml
<CustomField>
    <fullName>Canned_Response_Email_Template__c</fullName>
    <label>Canned Response Email Template</label>
    <length>255</length>
    <type>Text</type>
</CustomField>