force-app/main/default/objects/ASF_Case_Email_Config__c/fields/Case_Category_Config__c.field-meta.xml
<CustomField>
    <fullName>Case_Category_Config__c</fullName>
    <label>Case Category Config</label>
    <referenceTo>ASF_Case_Category_Config__c</referenceTo>
    <relationshipName>Regional_SMS_Email_Templates</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>