force-app/main/default/objects/ASF_Case_Email_Config__c/fields/Duplicate_Case_SMS_Metadata__c.field-meta.xml
<CustomField>
    <fullName>Duplicate_Case_SMS_Metadata__c</fullName>
    <label>Duplicate Case SMS Metadata</label>
    <length>255</length>
    <type>Text</type>
</CustomField>