force-app/main/default/objects/ASF_Case_Email_Config__c/fields/FTR_Email_Template__c.field-meta.xml
<CustomField>
    <fullName>FTR_Email_Template__c</fullName>
    <label>FTR Email Template</label>
    <length>255</length>
    <type>Text</type>
</CustomField>