force-app/main/default/objects/ASF_Case_Email_Config__c/fields/FTR_SMS_Metadata__c.field-meta.xml
<CustomField>
    <fullName>FTR_SMS_Metadata__c</fullName>
    <label>FTR SMS Metadata</label>
    <length>255</length>
    <type>Text</type>
</CustomField>