force-app/main/default/objects/ASF_Case_Email_Config__c/fields/New_Case_Email_Template__c.field-meta.xml
<CustomField>
    <fullName>New_Case_Email_Template__c</fullName>
    <label>New Case Email Template</label>
    <length>255</length>
    <type>Text</type>
</CustomField>