force-app/main/default/objects/ASF_Case_Email_Config__c/fields/Recategorisation_Email_Template__c.field-meta.xml
<CustomField>
    <fullName>Recategorisation_Email_Template__c</fullName>
    <label>Recategorisation Email Template</label>
    <length>255</length>
    <type>Text</type>
</CustomField>