force-app/main/default/objects/ASF_Case_Email_Config__c/fields/Recategorisation_SMS_Metadata__c.field-meta.xml
<CustomField>
    <fullName>Recategorisation_SMS_Metadata__c</fullName>
    <label>Recategorisation SMS Metadata</label>
    <length>255</length>
    <type>Text</type>
</CustomField>