force-app/main/default/objects/ASF_Case_Email_Config__c/fields/Regional_Template_External_ID__c.field-meta.xml
<CustomField>
    <fullName>Regional_Template_External_ID__c</fullName>
    <externalId>true</externalId>
    <label>Regional Template External ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>