force-app/main/default/objects/ASF_Case_Email_Config__c/fields/Resolved_Case_Email_Template__c.field-meta.xml
<CustomField>
    <fullName>Resolved_Case_Email_Template__c</fullName>
    <label>Resolved Case Email Template</label>
    <length>255</length>
    <type>Text</type>
</CustomField>